fix(vanillajs): disable wrap for current rate

--- a/vanilla-js-cbr/blocks/equal-expression/__item/equal-expression__item.css
+++ b/vanilla-js-cbr/blocks/equal-expression/__item/equal-expression__item.css
@@ -2,4 +2,6 @@
   /* reset browser styles */
   padding: 0;
   margin: 0;
+
+  white-space: nowrap;
 }
